--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h1> A <span>Catálago de Cursos Digitais</span></h1>
         <p>Somos um site independente onde apenas utilizamos de buscadores na web para anexar os mesmos aos arquivos. Todo projeto é automatizado fazendo com que os direitos esteja onde eles estão armazenados. Todo Conteúdo de cursos e e-books são de responsabilidades dos seus idealizadores, se o usuário havendo alguma dúvida ao contratar/comprar algum curso ou e-book deverá entrar em contato com o idealizador do curso ou e-books. Não armazenamos os cursos e os e-books em nosso site, por isso que é completamente dentro da lei. Indexamos conteúdos encontrados na web automaticamente usando Robôs de Inteligência artificial. O uso do nosso site é totalmente responsabilidade do usuário. A distribuição dos cursos e/ou dos e-books é da parte de plataformas utilizada pelos seus idealizadores. Qualquer violação de direitos autorais, entre em contato com o distribuidor. Em caso de dúvidas ou reclamações sobre conteúdo, funcionalidade do site, anúncios entre outros, entre em contato com a equipe de suporte.</p>
         <p><span>Compartilhe essa idéia</span> 
-            <a href="https://wa.me/?text=Acesse%20http://seusite.com.br" target="_blank" rel="external"> 
+            <a href="https://wa.me/?text=Acesse%20https://formsubmit.co/https://edmilsongimenez.github.io/catalogodigital/" target="_blank" rel="external"> 
                 <img width="50" height="50" src="images/Whatsapp-icon.png" alt=""></a><a href="https://www.facebook.com/sharer/sharer.php?u=#" target="_blank" rel="external"><img width="50" height="50" src="images/facebook.ico" alt=""></a>
         </p>
         <!--<a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a> -->
@@ -661,25 +661,7 @@
                 <img src="images/img1.jpg" alt="">
             </div>
 
-            <div class="box">
-                <img src="images/img2.jpg" alt="">
-            </div>
-
-            <div class="box">
-                <img src="images/img3.jpg" alt="">
-            </div>
-
-            <div class="box">
-                <img src="images/img4.jpg" alt="">
-            </div>
-
-            <div class="box">
-                <img src="images/img5.jpg" alt="">
-            </div>
-
-            <div class="box">
-                <img src="images/img6.jpg" alt="">
-            </div>
+           
 
         </div>
 
