--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
             <!--<form action="https://api.staticforms.xyz/submit" method="post">
                 <input type="hidden" name="accessKey" value="08b03261-be97-46c6-980a-e4b23e349bd5">
                 <input type="hidden" name="redirectTo" value="#">-->
-                <form action="https://formsubmit.co/https://edmilsongimenez.github.io/catalogodigital/" method="POST">
+                <form action="https://formsubmit.co/catalagodecursodigitais@gmail.com" method="POST">
 
 
 
