--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
 
                 <input type="text" placeholder="name" class="box">
                 <input type="email" placeholder="email" class="box">
-                <input type="text" placeholder="assunto" class="box">
+                <!--<input type="text" placeholder="assunto" class="box">-->
                 <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="mensagem"></textarea>
                 <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
 
